--- a/ESOF-docs/3. Architectural design.md
+++ b/ESOF-docs/3. Architectural design.md
@@ -22,15 +22,12 @@ No caso concreto do Bazel, depois de uma análise rigorosa ao código disponíve
 
 ![Logical View](Resources/Logical View.png)
 
-Este diagrama, também conhecido como *UML package diagrams* descreve os pacotes ou pedaços do sistema divididos em agrupamentos lógicos, mostrando as dependências entre eles. Assim, o Bazel é dividido em quatro *packages*, são eles: *Command-Line Interface*, *Protocol Buffers*, *Java Native interface* e *Core*. 
-
-A *Command-Line Interface* contém o código do cliente, escrito em C++ , que consiste num conjunto de módulos que comunicam entre si, através de eventos e chamadas de funções.
-
-Os *Protocol Buffers* são uma linguagem neutra da Google, independente de plataforma e extensível para serialização de dados estruturados, semelhante ao XML, no entanto mais curta, rápida e simples. Define-se a estrutura dos dados e pode-se facilmente ler e escrever nela, através das mais diversas linguagens.
-
-A *Java Native interface* é responsável pela comunicação entre C++ e Java. Com esta interface é possível escrever métodos nativos para tratar situações em que a biblioteca padrão de classes Java não suporta bibliotecas ou características específicas da plataforma.
-
-O *Core* é constituído pelo código do servidor, onde se inclui o utilitário SkyFrame, que usa as regras embutidas da Google e da Skylark. O SkyFrame é uma evolução paralela e incremental do Bazel, que pode melhor conhecida [aqui](http://bazel.io/docs/skyframe.html).
+Este diagrama, também conhecido como *UML package diagram* descreve os pacotes ou pedaços do sistema divididos em agrupamentos lógicos, mostrando as dependências entre eles. Assim, o Bazel é dividido em quatro *packages*, são eles: 
+* A *Command-Line Interface* contém o código do cliente, escrito em C++ , que consiste num conjunto de módulos que comunicam entre si, através de eventos e chamadas de funções.
+* Os *Protocol Buffers* são uma linguagem neutra da Google, independente de plataforma e extensível para serialização de dados estruturados, semelhante ao XML, no entanto mais curta, rápida e simples. Define-se a estrutura dos dados e pode-se facilmente ler e escrever nela, através das mais diversas linguagens.
+* A *Java Native interface* é responsável pela comunicação entre C++ e Java. Com esta interface é possível escrever métodos nativos para tratar situações em que a biblioteca padrão de classes Java não suporta bibliotecas ou características específicas da plataforma.
+* O *Core* é constituído pelo código do servidor, onde se inclui o utilitário SkyFrame, que usa as regras embutidas da Google e da Skylark. O SkyFrame é uma evolução paralela e incremental do Bazel, que pode melhor conhecida [aqui](http://bazel.io/docs/skyframe.html).
+A ligação entre os diversos pacotes é fácilmente percebida através da imagem, bem como o sentido da relação que se estabelece.
 
 
 ## *Implementation View* ##
@@ -42,6 +39,15 @@ Como dito nos relatórios anteriores, o Bazel é constituído por diversas lingu
 ## *Deployment View* ##
 
 ![Deployment View](Resources/Deployment View.png)
+
+Para utilizar esta *Framework*, apenas precisamos de um computador cujo sistema operativo seja o Ubuntu Linux (Utopic 14.10 and Trusty 14.04) ou o Mac OS X. É necessário também que o computador tenha instalado o *Java Development Kit* (JDK) 8 ou mais recente, apesar do JDK 7 funcionar, não é recomendado.
+Para instalar o Bazel é necessário correr o instalador, através do seguinte comando:
+```
+$ chmod +x install-version-os.sh
+$ ./install-version-os.sh --user
+```
+A *flag*  “--user” instala o Bazel no diretório “$HOME/bin” do sistema e coloca o caminho “.bazelrc” em “$HOME/.bazelrc”. Pode-se também utilizar o comando “--help” para ver opções de instalação adicionais.  
+
 
 ## *Process View* ##
 
