--- a/ESOF-docs/3. Architectural design.md
+++ b/ESOF-docs/3. Architectural design.md
@@ -14,19 +14,19 @@
 
 ## Introdução ##
 
-A arquitetura de *software* inclui, em geral, todas as decisões importantes sobre a organização e o sistema de software. Os diagramas apresentam a organização fundamental do sistema, os seus componentes e as relações entre eles. Assim, é possível analisar a evolução e o desenvolvimento do projeto.
+A arquitetura de *software* inclui, em geral, todas as decisões importantes sobre a organização e o sistema de *software*. Os diagramas apresentam a organização fundamental do sistema, os seus componentes e as relações entre eles. Assim, é possível analisar a evolução e o desenvolvimento do projeto.
 
-No caso concreto do Bazel, depois de uma análise rigorosa ao código disponível e à forma como ele está organizado, chegamos a algumas conclusões. Entre elas, destacam-se a ausência de uma arquitetura rigorosa e definida, a existência de um propósito válido de existência e a aposta num objetivo claro e útil para diversos serviços.
+No caso concreto do Bazel, depois de uma análise rigorosa ao código disponível e à forma como ele está organizado, concluiu-se que não há uma arquitetura rigorosa e definida. Por outro lado, há claramente um propósito válido de existência e uma  aposta numa ferramenta clara e útil para diversos serviços.
 
 ## *Logical View* ##
 
 ![Logical View](Resources/Logical View.png)
 
-Este diagrama, também conhecido como *UML package diagram* descreve os pacotes ou pedaços do sistema divididos em agrupamentos lógicos, mostrando as dependências entre eles. Assim, o Bazel é dividido em quatro *packages*, são eles: 
+Este diagrama, também conhecido como *UML package diagram* descreve os pacotes ou pedaços do sistema divididos em agrupamentos lógicos, mostrando as dependências entre eles. Assim, o Bazel é dividido em quatro *packages*, são eles:
 * A *Command-Line Interface* contém o código do cliente, escrito em C++ , que consiste num conjunto de módulos que comunicam entre si, através de eventos e chamadas de funções.
 * Os *Protocol Buffers* são uma linguagem neutra da Google, independente de plataforma e extensível para serialização de dados estruturados, semelhante ao XML, no entanto mais curta, rápida e simples. Define-se a estrutura dos dados e pode-se facilmente ler e escrever nela, através das mais diversas linguagens.
 * A *Java Native interface* é responsável pela comunicação entre C++ e Java. Com esta interface é possível escrever métodos nativos para tratar situações em que a biblioteca padrão de classes Java não suporta bibliotecas ou características específicas da plataforma.
-* O *Core* é constituído pelo código do servidor, onde se inclui o utilitário SkyFrame, que usa as regras embutidas da Google e da Skylark. O SkyFrame é uma evolução paralela e incremental do Bazel, que pode melhor conhecida [aqui](http://bazel.io/docs/skyframe.html).
+* O *Core* é constituído pelo código do "servidor", onde se inclui o utilitário SkyFrame, que usa as regras embutidas da Google e da Skylark. O SkyFrame é uma evolução paralela e incremental do Bazel, que pode melhor conhecida [aqui](http://bazel.io/docs/skyframe.html).
 
 A ligação entre os diversos pacotes é fácilmente percebida através da imagem, bem como o sentido da relação que se estabelece.
 
@@ -41,7 +41,7 @@ Como dito nos relatórios anteriores, o Bazel é constituído por diversas lingu
 
 ![Deployment View](Resources/Deployment View.png)
 
-Para utilizar esta *Framework*, apenas precisamos de um computador cujo sistema operativo seja o Ubuntu Linux (Utopic 14.10 and Trusty 14.04) ou o Mac OS X. É necessário também que o computador tenha instalado o *Java Development Kit* (JDK) 8 ou mais recente, apesar do JDK 7 funcionar, não é recomendado.
+Para utilizar esta *framework*, apenas precisamos de um computador cujo sistema operativo seja o Ubuntu Linux (Utopic 14.10 and Trusty 14.04) ou o Mac OS X. É necessário também que o computador tenha instalado o *Java Development Kit* (JDK) 8 ou mais recente, apesar do JDK 7 funcionar, não é recomendado.
 Para instalar o Bazel é necessário correr o instalador, através do seguinte comando:
 ```
 $ chmod +x install-version-os.sh
@@ -59,9 +59,9 @@ A *flag*  “--user” instala o Bazel no diretório “$HOME/bin” do sistema 
 * Guia de instalação: http://bazel.io/docs/install.html
 
 ## Contribuições ##
-* António Ramadas: 
-* João Guarda:
-* Rui Vilares: 
+* António Ramadas: 2 horas.
+* João Guarda: 2 horas.
+* Rui Vilares: 2 horas.
 * Trabalho em grupo: 4 horas.
 
 ## Autores ##
