--- a/ESOF-docs/3. Architectural design.md
+++ b/ESOF-docs/3. Architectural design.md
@@ -26,7 +26,7 @@ Este diagrama, também conhecido como *UML package diagram* descreve os pacotes 
 * A *Command-Line Interface* contém o código do cliente, escrito em C++ , que consiste num conjunto de módulos que comunicam entre si, através de eventos e chamadas de funções.
 * Os *Protocol Buffers* são uma linguagem neutra da Google, independente de plataforma e extensível para serialização de dados estruturados, semelhante ao XML, no entanto mais curta, rápida e simples. Define-se a estrutura dos dados e pode-se facilmente ler e escrever nela, através das mais diversas linguagens.
 * A *Java Native interface* é responsável pela comunicação entre C++ e Java. Com esta interface é possível escrever métodos nativos para tratar situações em que a biblioteca padrão de classes Java não suporta bibliotecas ou características específicas da plataforma.
-* O *Core* é constituído pelo código do "servidor", onde se inclui o utilitário SkyFrame, que usa as regras embutidas da Google e da Skylark. O SkyFrame é uma evolução paralela e incremental do Bazel, que pode melhor conhecida [aqui](http://bazel.io/docs/skyframe.html).
+* O *Core* é constituído pelo código do "servidor", onde se inclui o utilitário SkyFrame, que usa as regras embutidas da Google e da Skylark. O SkyFrame é uma ferramenta de avaliação paralela e incremental do Bazel, que pode melhor conhecida [aqui](http://bazel.io/docs/skyframe.html).
 
 A ligação entre os diversos pacotes é fácilmente percebida através da imagem, bem como o sentido da relação que se estabelece.
 
@@ -51,6 +51,20 @@ A *flag*  “--user” instala o Bazel no diretório “$HOME/bin” do sistema 
 
 
 ## *Process View* ##
+
+Visto o código deste repositório ser muito extenso, um diagrama de sequência seria muito pesado e confuso. Optou-se então por explicar o funcionamento do *Core package* do projecto. Com isto pode ter-se uma melhor percepção da vista de processos do Bazel.
+### Skyframe ###
+Como referido acima, a principal ferramenta utilizada pelo Bazel é o *Skyframe*. Esta ferramenta tem como objectivo analisar o código do *build request*.
+Para uma melhor compreensão desta *framework* dividiu-se a mesma em 3 tópicos:
+* Modelo de dados (*Data Model*);
+* Avaliação (*Evalution*);
+* Incrementalidade (*Incrementality*).
+
+#### Modelo de Dados ####
+O modelo de dados consiste num grafo contendo a relação de dependencia entre os nós. Cada nó, também denomindado de ***SkyValue***, é um objecto imutável que contém informação que já foi "construída" ao longo *build* assim como os seus *inputs* (Ex.: *input files, output files, targets* e *configured targets*). Cada nó tem um nome para o referir, sendo que este se chama ***SkyKey*** (EX.: *FILECONTENTS:/tmp/foo* ou *PACKAGE://foo*).
+Para efectuar o build de cada nó tendo em conta as suas dependências é utiliaza a ***SkyFunction***.
+#### Avaliação ####
+#### Incrementalidade ####
 
 ## Referências ##
 
