--- a/ESOF-docs/3. Architectural design.md
+++ b/ESOF-docs/3. Architectural design.md
@@ -56,13 +56,13 @@ Visto o código deste repositório ser muito extenso, um diagrama de sequência 
 ### Skyframe ###
 Como referido acima, a principal ferramenta utilizada pelo Bazel é o *Skyframe*. Esta ferramenta tem como objectivo analisar o código do *build request*.
 Para uma melhor compreensão desta *framework* dividiu-se a mesma em 3 tópicos:
-* Modelo de dados (*Data Model*);
-* Avaliação (*Evalution*);
-* Incrementalidade (*Incrementality*).
+* [Modelo de dados (*Data Model*)](#modelo-de-dados);
+* [Avaliação (*Evalution*)](#avaliação);
+* [Incrementalidade (*Incrementality*)](#incrementalidade).
 
 #### Modelo de Dados ####
 O modelo de dados consiste num grafo contendo a relação de dependencia entre os nós. Cada nó, também denomindado de ***SkyValue***, é um objecto imutável que contém informação que já foi "construída" ao longo *build* assim como os seus *inputs* (Ex.: *input files, output files, targets* e *configured targets*). Cada nó tem um nome para o referir, sendo que este se chama ***SkyKey*** (EX.: *FILECONTENTS:/tmp/foo* ou *PACKAGE://foo*).
-Para efectuar o build de cada nó tendo em conta as suas dependências é utiliaza a ***SkyFunction***.
+Para efectuar o build de cada nó tendo em conta as suas dependências é utilizada a ***SkyFunction***.
 #### Avaliação ####
 #### Incrementalidade ####
 
