--- a/ESOF-docs/3. Architectural design.md
+++ b/ESOF-docs/3. Architectural design.md
@@ -64,6 +64,10 @@ Para uma melhor compreensão desta *framework* dividiu-se a mesma em 3 tópicos:
 O modelo de dados consiste num grafo contendo a relação de dependencia entre os nós. Cada nó, também denomindado de ***SkyValue***, é um objecto imutável que contém informação que já foi "construída" ao longo *build* assim como os seus *inputs* (Ex.: *input files, output files, targets* e *configured targets*). Cada nó tem um nome para o referir, sendo que este se chama ***SkyKey*** (EX.: *FILECONTENTS:/tmp/foo* ou *PACKAGE://foo*).
 Para efectuar o build de cada nó tendo em conta as suas dependências é utilizada a ***SkyFunction***.
 #### Avaliação ####
+Uma build consiste em avaliar o nó que representa o *build request* (este é o estado que se quer atingir). Após ser encontrada a *SkyFunction*, esta é executada com a *SkyKey*. A função faz então uma avaliação dos nós que precisa para poder chegar ao estado final. Uma avaliação termina queando se chega a uma folha (geralmente representam as *input files*). No final obtemos a *SkyValue*, alguns efeitos colaterais (ficheiro de output por exemplo) e um grafo acíclico que representa a dependência dos nós involvidos na compilação.
+A *SkyFunction* pode requesitar *SkyKeys* nas multiplas passagens se não conseguir determinar com antecedência todos os nós necessários. Uma função não deve aceder aos ficheiros diretamente, mas apenas através das suas dependências (desta maneira, é registada a dependência da informação que foi lida).
+Em suma, esta avaliação permite:
+* Hermeticidade - as funções só podem aceder à *input data* se dependerem de outros nós. Assim, é possível garantir que se a *input data* for a mesma, o resultado é o mesmo.
 #### Incrementalidade ####
 
 ## Referências ##
