--- a/ESOF-docs/3. Architectural design.md
+++ b/ESOF-docs/3. Architectural design.md
@@ -63,6 +63,7 @@ Para uma melhor compreensão desta *framework* dividiu-se a mesma em 3 tópicos:
 #### Modelo de Dados ####
 O modelo de dados consiste num grafo contendo a relação de dependencia entre os nós. Cada nó, também denomindado de ***SkyValue***, é um objecto imutável que contém informação que já foi "construída" ao longo *build* assim como os seus *inputs* (Ex.: *input files, output files, targets* e *configured targets*). Cada nó tem um nome para o referir, sendo que este se chama ***SkyKey*** (EX.: *FILECONTENTS:/tmp/foo* ou *PACKAGE://foo*).
 Para efectuar o build de cada nó tendo em conta as suas dependências é utilizada a ***SkyFunction***.
+
 #### Avaliação ####
 Uma build consiste em avaliar o nó que representa o *build request* (este é o estado que se quer atingir). Após ser encontrada a *SkyFunction*, esta é executada com a *SkyKey*. A função faz então uma avaliação dos nós que precisa para poder chegar ao estado final. Uma avaliação termina queando se chega a uma folha (geralmente representam as *input files*). No final obtemos a *SkyValue*, alguns efeitos colaterais (ficheiro de output por exemplo) e um grafo acíclico que representa a dependência dos nós involvidos na compilação.
 A *SkyFunction* pode requisitar *SkyKeys* nas multiplas passagens se não conseguir determinar com antecedência todos os nós necessários. Uma função não deve aceder aos ficheiros diretamente, mas apenas através das suas dependências (desta maneira, é registada a dependência da informação que foi lida).
@@ -72,6 +73,7 @@ Em suma, esta avaliação permite:
 * Paralelismo - como as funções apenas podem interagir através de dependências, então é possível executar em paralelo outras funções que não dependem de outras. É garantido que o resultado é o mesmo que uma execução parcial.
 
 #### Incrementalidade ####
+As funções só conseguem aceder à *input data* através da dependência com outros nós. Por conseguinte, o Bazel consegue criar um diagrama de fluxo desde as *input files* até às *output files* e com esta informação é possível compilar apenas os nós que precisam.
 
 ## Referências ##
 
