--- a/ESOF-docs/3. Architectural design.md
+++ b/ESOF-docs/3. Architectural design.md
@@ -73,7 +73,9 @@ Em suma, esta avaliação permite:
 * Paralelismo - como as funções apenas podem interagir através de dependências, então é possível executar em paralelo outras funções que não dependem de outras. É garantido que o resultado é o mesmo que uma execução parcial.
 
 #### Incrementalidade ####
-As funções só conseguem aceder à *input data* através da dependência com outros nós. Por conseguinte, o Bazel consegue criar um diagrama de fluxo desde as *input files* até às *output files* e com esta informação é possível compilar apenas os nós que precisam.
+As funções só conseguem aceder à *input data* através da dependência com outros nós. Por conseguinte, o Bazel consegue criar um diagrama de fluxo desde as *input files* até às *output files* e com esta informação é possível recompilar apenas os nós que precisam.
+O bazel possui duas estratégias de incrementalidade, sendo as duas estratégias óptimas dependendo do grafo de dependências:
+* *** Bottom-Up ***
 
 ## Referências ##
 
