--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -13,29 +13,61 @@
 
 ## Introdução ##
 
+O sucesso do *software* depende muito do processo de testes. Testar um sistema com casos de teste definidos e avaliar os seus resultados é o primeiro passo para aumentar a confiança no *software* e avaliar a qualidade do produto.
 
+No caso específico do *Bazel*, os principais recursos são intensivamente testados. Os testes usados, juntamente com uso intensivo por parte da *Google*, garantem actualmente uma versão estável.
+
+É importante perceber que os testes permitem descobrir a existencia de falhas, no entanto, não provam a não existência delas.
 
 ## *Degree of Testability of the software program* ##
 
 
 
+### *Controllability* ###
+
+
+
+### *Isolateability* ###
+
+
+
+### *Separation of concerns* ###
+
+
+
+### *Understandability* ###
+
+
+
+### *Heterogeneity* ###
+
+
+
 ## *Test Statistics* ##
 
-
+As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema.   
 
 ## *Bug report* ##
 
+Known Issues
 
+The version of the Closure Templates compiler that is used will emit warnings about protected property access and about a missing enum value. These issues have been fixed in the source, but are not yet available as a downloadable archive. These warnings are safe to ignore.
 
-## *Process View* ##
+You may define a newlocalrepository target if you wish to check out the source from Github yourself. Otherwise you may wish to wait until the Closure tools are available as Bazel workspaces. e.g.
 
-
+```
+new_local_repository(
+    name = "closure_templates",
+    build_file = "tools/build_rules/closure/closure_templates.BUILD",
+    path = "/home/user/src/github/google/closure-templates/target",
+)
+```
 
 ## Referências ##
 
 * Página oficial: http://bazel.io/
-* Estrutura do código: http://bazel.io/contributing.html
-* Guia de instalação: http://bazel.io/docs/install.html
+* Problemas: https://github.com/bazelbuild/bazel/issues
+* FAQs: http://bazel.io/faq.html
 
 ## Contribuições ##
 * António Ramadas: 2 horas.
