--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -45,7 +45,20 @@ No caso específico do *Bazel*, os principais recursos são intensivamente testa
 
 ## *Test Statistics* ##
 
-As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema.   
+As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema.
+
+### *Unit testing* ###
+
+### *Integration testing* ###
+
+### *System testing* ###
+
+### *Acceptance testing* ###
+
+Como já referimos em relatórios anteriores, o cliente deste produto é o próprio programador. Já discutimos as vantagens inerentes como por exemplo  estar definido desde o início o que o programador/cliente pretende. Assim, no nosso caso não são necessários *acceptance tests*, pois o Bazel é contruído pelos clientes.
+
+### *Regression testing* ###
+
 
 ## *Bug report* ##
 
