--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -45,7 +45,7 @@ No caso específico do *Bazel*, os principais recursos são intensivamente testa
 
 ## *Test Statistics* ##
 
-As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema.
+As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema. No Bazel, o código aceite tem que obedecer a [condições rigorosas](http://bazel.io/governance.html#core-contributors) em que só é aceite código bem escrito e testado (este escrutínio pode não acontecer em casos excecionais).
 
 ### *Unit testing* ###
 
@@ -53,12 +53,15 @@ As estatísticas resultam de casos de testes representativos para estimar o valo
 
 ### *System testing* ###
 
+Para um *pull request* ser aceite pelo master, é preciso que o código (funções) feito tenha vários casos de teste [Patch Acceptance Process](http://bazel.io/contributing.html) e que não altere negativamente o funcionamento global do programa. Deste modo, as futuras funções a ser implementadas podem ser implementadas sabendo que o código base está certo e se os testes falharem, então alguma das novas funções está a alterar negativamente o comportamento do programa. Como o Bazel ainda está numa fase beta, então a cada *pull request* são executados todos os testes unitários de novo. Contudo, pode não ser suficiente (pois pode ser alterado o funcionamento global sem que os testes unitários o detetem).
+
 ### *Acceptance testing* ###
 
 Como já referimos em relatórios anteriores, o cliente deste produto é o próprio programador. Já discutimos as vantagens inerentes como por exemplo  estar definido desde o início o que o programador/cliente pretende. Assim, no nosso caso não são necessários *acceptance tests*, pois o Bazel é contruído pelos clientes.
 
 ### *Regression testing* ###
 
+Sempre que uma alteração é proposta, um *core contributor* fica responsável por testá-la e avaliá-la. Uma das suas preocupações é que esta alteração não provoque erros nas restantes funções implementadas. Assim, a execução de testes de uma parte seletiva é sempre feita a cada importante alteração (como *pull requests* por exemplo).
 
 ## *Bug report* ##
 
