Atualização dos titulos para português

--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -19,27 +19,31 @@ No caso específico do *Bazel*, os principais recursos são intensivamente testa
 
 É importante perceber que os testes permitem descobrir a existencia de falhas, no entanto, não provam a não existência delas.
 
-## *Degree of Testability of the software program* ##
+## *Grau de "testabilidade" do Bazel* ##
 
 
 
-### *Controllability* ###
+### *Controlabilidade* ###
 
 
 
-### *Isolateability* ###
+### *Observabilidade* ###
 
 
 
-### *Separation of concerns* ###
+### *Isolabilidade* ###
 
 
 
-### *Understandability* ###
+### *Separação de responsabilidades* ###
 
 
 
-### *Heterogeneity* ###
+### *Documentação* ###
+
+
+
+### *Heterogeneidade* ###
 
 
 
