Grau de testabilidade

--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -21,7 +21,7 @@ No caso específico do *Bazel*, os principais recursos são intensivamente testa
 
 ## *Grau de "testabilidade" do Bazel* ##
 
-
+O Bazel é, resumidamente, um compilador. Assim, para testar as componentes separadamente é relativamente simples, pois não existe uma componente gráfica complexa (apenas linha de comandos). Assim, basta verificar que o output é igual ao resultado esperado sem ser preciso nenhuma interação com o utilizador (ao contrário do teste de algumas funções dos jogos). Contudo, o Bazel, na sua versão final, irá comunicar com as componentes em conjunto. Por conseguinte, é necessário fazer testes em conjunto em que um teste começa num componente e estende-se a outro. Veja-se o exemplo da linha de comandos ter uma comunicação bidirecional com a *Java Native Interface*. Concluindo, testar o comportamento das componentes em conjunto acaba por se revelar uma tarefa um pouco complicada.
 
 ### *Controlabilidade* ###
 
