--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -25,7 +25,7 @@ O Bazel é, resumidamente, um compilador. Assim, para testar as componentes sepa
 
 ### *Controlabilidade* ###
 
-
+As componentes se testadas separadamente são relativamente simples de controlar (CUT - Component Under Test). O grau de dificuldade prende-se principalmente com o grau de entendimento que o programador tem com o programa. Assim, para um programador que acompanhou o progresso do *software* desde o início terá mais facilidade. Contudo, existem componentes que são mais difíceis de controlar por dependerem de ficheiros externos do utilizador. Neste caso, o programador tem de testar variados casos de teste para verificar a sua operabilidade em vez de testar só os casos principais. Atenta-se o exemplo: o Bazel pretende compilar grandes (e complexos) projetos em diversas linguagens de programação, assim é preciso testar todas estas combinações (C++ e Java, só Java, só C, entre outros).
 
 ### *Observabilidade* ###
 
