--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -33,7 +33,7 @@ Para um *pull request* ser aceite pelo master, é preciso que o código (funçõ
 
 ### *Isolabilidade* ###
 
-No Bazel, as componentes comunicam entre si, logo é difícil isolar uma componente das restantes. Contudo, é possível testar as funções que cada componente deve fazer dentro de si sem necessidade de componentes externos como saber quais foram os ficheiros modificados e, consequentemente, necessitam de ser compilados.
+No Bazel, as componentes comunicam entre si, logo é difícil isolar uma componente das restantes. Contudo, é possível testar as funções que cada componente deve fazer dentro de si sem necessidade de componentes externos como saber quais foram os ficheiros modificados e, consequentemente, necessitam de ser compilados. Assim, a componente sob teste (CUT) apenas pode ser testada parcialmente para ser de maneira isolada.
 
 ### *Separação de responsabilidades* ###
 
