Separação de responsabilidades

--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -37,7 +37,11 @@ No Bazel, as componentes comunicam entre si, logo é difícil isolar uma compone
 
 ### *Separação de responsabilidades* ###
 
-
+Foi estudado no relatório anterior a estrutura do Bazel e da maneira como estava organizado. Cada componente tem responsabilidades bem definidas. As componentes só comunicam entre si quando necessário, pois a eficácia é crucial neste projeto. Assim, as responsabilidades de cada componente são:
+- Command-Line Interface (C++): interface com o utilizador na linha de comandos. É responsável por lidar com os pedidos do utilizador e executa os respetivos pedidos através da comunicação com outras componentes.
+- [Protocol Buffers](https://developers.google.com/protocol-buffers/?hl=pt-PT): permite a utilização de várias linguagens de programação (neste caso C++ e Java) através da definição das mesmas estruturas.
+- [Java Native Interface](https://en.wikipedia.org/wiki/Java_Native_Interface): interface de comunicação entre C++ e Java. É responsável por "converter" os pedidos de uma linguagem para a outra (bidirecional).
+- Core: componente mais importante do Bazel. É responsável por saber quais os ficheiros que necessitam de ser compilados e, se necessário, recompilar.
 
 ### *Documentação* ###
 
