Software testability started

--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -3,9 +3,9 @@
 **Conteúdos**
 - [Testes de Software](#relatório-4---testes-de-software)
 	- [Introdução](#introdução)
-	- [Degree of Testability of the software program](#degree-of-testability-of-the-software-program)
-	- [Test Statistics](#test-statistics)
-	- [Bug report](#bug-report)
+	- [Testabilidade do Software](#testabilidade-do-software)
+	- [Estatísticas de Teste](#estatísticas-de-teste)
+	- [Correção de Bug](#correção-de-bug)
 	- [Referências](#referências)
 	- [Contribuições](#contribuições)
 	- [Autores](#autores)
@@ -15,55 +15,71 @@
 
 O sucesso do *software* depende muito do processo de testes. Testar um sistema com casos de teste definidos e avaliar os seus resultados é o primeiro passo para aumentar a confiança no *software* e avaliar a qualidade do produto.
 
-No caso específico do *Bazel*, os principais recursos são intensivamente testados. Os testes usados, juntamente com uso intensivo por parte da *Google*, garantem actualmente uma versão estável.
+No caso específico do *Bazel*, os principais recursos são intensivamente testados. Os testes usados, juntamente com uso intensivo por parte da *Google*, garantem atualmente uma versão estável.
 
-É importante perceber que os testes permitem descobrir a existencia de falhas, no entanto, não provam a não existência delas.
+É importante perceber que os testes permitem descobrir a existência de falhas, no entanto, não provam a não existência delas.
 
-## *Degree of Testability of the software program* ##
+## Testabilidade do Software ##
 
+Esta propriedade extrínseca indica o grau de testabilidade que um determinado *software* suporta. Quanto maior for a capacidade de teste, mais fácil é encontrar falhas no sistema.
 
+Apesar do *Bazel* ser utilizado para definir automaticamente testes unitários em várias linguagens, é também alvo de testes, que validam e verificam a sua funcionalidade.  
 
-### *Controllability* ###
+### Controlabilidade ###
 
+Representa o grau de possibilidade de controlo do componente sob teste (CUT - *Component Under Test*).
 
+Aqui, tendo em conta a complexidade do *Bazel*, a controlabilidade depende do componente que nos queiramos referimos.  
 
-### *Isolateability* ###
+### Observabilidade ###
 
+Através da observabilidade, sabe-se o grau de possibilidade para determinar os resultados intermédios e finais dos testes.
 
+Os resultados dos testes obtêm-se através da compilação em ambiente Linux ou Mac. É possível correr os *scripts* para os testes unitários no Eclipse e no IntelliJ e analisar facilmente os resultados obtidos.
 
-### *Separation of concerns* ###
+### Isolabilidade ###
 
+A isolabilidade representa o grau com que cada componente (CUT) pode ser testado isoladamente.
 
+sadasdsa
 
-### *Understandability* ###
+### Separação de responsabilidades ###
 
+A separação de responsabilidades é importante para determinar se o componente sob teste (CUT) tem uma responsabilidade única, bem definida.
 
+sduhsadsaind
 
-### *Heterogeneity* ###
+### Inteligibilidade ###
 
+Através deste fator, obtemos o grau com que cada componente sob teste é documentado e autoexplicativo.
 
+fgsddfsd
 
-## *Test Statistics* ##
+### Heterogeneidade ###
+
+Determina o grau que o uso de diversas tecnologias requer para usar diversos métodos de ensaio e ferramentas em paralelo.
+
+sfsds
+
+## Estatísticas de Teste ##
 
 As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema. No Bazel, o código aceite tem que obedecer a [condições rigorosas](http://bazel.io/governance.html#core-contributors) em que só é aceite código bem escrito e testado (este escrutínio pode não acontecer em casos excecionais).
 
-### *Unit testing* ###
+### Testes unitários ###
 
-### *Integration testing* ###
-
-### *System testing* ###
+### Testes de sistema ###
 
 Para um *pull request* ser aceite pelo master, é preciso que o código (funções) feito tenha vários casos de teste [Patch Acceptance Process](http://bazel.io/contributing.html) e que não altere negativamente o funcionamento global do programa. Deste modo, as futuras funções a ser implementadas podem ser feitas sabendo que o código base está certo e se os testes falharem, então alguma das novas funções está a alterar negativamente o comportamento do programa. Como o Bazel ainda está numa fase beta, então a cada *pull request* são executados todos os testes unitários de novo. Contudo, pode não ser suficiente (pois pode ser alterado o funcionamento global sem que os testes unitários o detetem).
 
-### *Acceptance testing* ###
+### Testes de aceitação ###
 
-Como já referimos em relatórios anteriores, o cliente deste produto é o próprio programador. Já discutimos as vantagens inerentes como por exemplo  estar definido desde o início o que o programador/cliente pretende. Assim, no nosso caso não são necessários *acceptance tests*, pois o Bazel é contruído pelos clientes.
+Como já referimos em relatórios anteriores, o cliente deste produto é o próprio programador. Já discutimos as vantagens inerentes, como por exemplo estar definido desde o início o que o programador/cliente pretende. Assim, no nosso caso não são necessários *acceptance tests*, pois o Bazel é contruído pelos clientes.
 
-### *Regression testing* ###
+### Testes de regressão ###
 
 Sempre que uma alteração é proposta, um *core contributor* fica responsável por testá-la e avaliá-la. Uma das suas preocupações é que esta alteração não provoque erros nas restantes funções implementadas. Assim, a execução de testes de uma parte seletiva é sempre feita a cada importante alteração (como *pull requests* por exemplo).
 
-## *Bug report* ##
+## Correção de *Bug* ##
 
 Known Issues
 
@@ -78,6 +94,10 @@ new_local_repository(
     path = "/home/user/src/github/google/closure-templates/target",
 )
 ```
+
+ou
+
+Procurar no LINK ISSUES
 
 ## Referências ##
 
@@ -103,4 +123,4 @@ Turma 1 - Grupo 4
 
 Faculdade de Engenharia da Universidade do Porto
 
-29 de novembro de 2015
+22 de novembro de 2015
