--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -3,9 +3,9 @@
 **Conteúdos**
 - [Testes de Software](#relatório-4---testes-de-software)
 	- [Introdução](#introdução)
-	- [Degree of Testability of the software program](#degree-of-testability-of-the-software-program)
-	- [Test Statistics](#test-statistics)
-	- [Bug report](#bug-report)
+	- [Grau de Testabilidade](#grau-de-testabilidade)
+	- [Estatísticas de Teste](#estatísticas-de-teste)
+	- [Correção do *Bug*](#correção-do-bug)
 	- [Referências](#referências)
 	- [Contribuições](#contribuições)
 	- [Autores](#autores)
@@ -19,23 +19,23 @@ No caso específico do *Bazel*, os principais recursos são intensivamente testa
 
 É importante perceber que os testes permitem descobrir a existencia de falhas, no entanto, não provam a não existência delas.
 
-## *Grau de "testabilidade" do Bazel* ##
+## Grau de Testabilidade ##
 
 O Bazel é, resumidamente, um compilador. Assim, para testar as componentes separadamente é relativamente simples, pois não existe uma componente gráfica complexa (apenas linha de comandos). Assim, basta verificar que o output é igual ao resultado esperado sem ser preciso nenhuma interação com o utilizador (ao contrário do teste de algumas funções dos jogos). Contudo, o Bazel, na sua versão final, irá comunicar com as componentes em conjunto. Por conseguinte, é necessário fazer testes em conjunto em que um teste começa num componente e estende-se a outro. Veja-se o exemplo da linha de comandos ter uma comunicação bidirecional com a *Java Native Interface*. Concluindo, testar o comportamento das componentes em conjunto acaba por se revelar uma tarefa um pouco complicada.
 
-### *Controlabilidade* ###
+### Controlabilidade ###
 
 As componentes se testadas separadamente são relativamente simples de controlar (CUT - Component Under Test). O grau de dificuldade prende-se principalmente com o grau de entendimento que o programador tem com o programa. Assim, para um programador que acompanhou o progresso do *software* desde o início terá mais facilidade. Contudo, existem componentes que são mais difíceis de controlar por dependerem de ficheiros externos do utilizador. Neste caso, o programador tem de testar variados casos de teste para verificar a sua operabilidade em vez de testar só os casos principais. Atenta-se o exemplo: o Bazel pretende compilar grandes (e complexos) projetos em diversas linguagens de programação, assim é preciso testar todas estas combinações (C++ e Java, só Java, só C, entre outros).
 
-### *Observabilidade* ###
+### Observabilidade ###
 
 Para um *pull request* ser aceite pelo master, é preciso que o código (funções) feito tenha vários casos de teste [Patch Acceptance Process](http://bazel.io/contributing.html) e que não altere negativamente o funcionamento global do programa. Deste modo, as futuras funções a ser implementadas podem ser feitas sabendo que o código base está certo e se os testes falharem, então alguma das novas funções está a alterar negativamente o comportamento do programa. Como o Bazel ainda está numa fase beta, então a cada *pull request* são executados todos os testes unitários de novo.
 
-### *Isolabilidade* ###
+### Isolabilidade ###
 
 No Bazel, as componentes comunicam entre si, logo é difícil isolar uma componente das restantes. Contudo, é possível testar as funções que cada componente deve fazer dentro de si sem necessidade de componentes externos como saber quais foram os ficheiros modificados e, consequentemente, necessitam de ser compilados. Assim, a componente sob teste (CUT) apenas pode ser testada parcialmente para ser de maneira isolada.
 
-### *Separação de responsabilidades* ###
+### Separação de responsabilidades ###
 
 Foi estudado no relatório anterior a estrutura do Bazel e da maneira como estava organizado. Cada componente tem responsabilidades bem definidas. As componentes só comunicam entre si quando necessário, pois a eficácia é crucial neste projeto. Assim, as responsabilidades de cada componente são:
 - Command-Line Interface (C++): interface com o utilizador na linha de comandos. É responsável por lidar com os pedidos do utilizador e executa os respetivos pedidos através da comunicação com outras componentes.
@@ -43,39 +43,39 @@ Foi estudado no relatório anterior a estrutura do Bazel e da maneira como estav
 - [Java Native Interface](https://en.wikipedia.org/wiki/Java_Native_Interface): interface de comunicação entre C++ e Java. É responsável por "converter" os pedidos de uma linguagem para a outra (bidirecional).
 - Core: componente mais importante do Bazel. É responsável por saber quais os ficheiros que necessitam de ser compilados e, se necessário, recompilar.
 
-### *Documentação* ###
+### Facilidade de leitura ###
 
 
 
-### *Heterogeneidade* ###
+### Heterogeneidade ###
 
 
 
-## *Test Statistics* ##
+## Estatísticas de Teste ##
 
 As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema. No Bazel, o código aceite tem que obedecer a [condições rigorosas](http://bazel.io/governance.html#core-contributors) em que só é aceite código bem escrito e testado (este escrutínio pode não acontecer em casos excecionais).
 
-### *Unit testing* ###
+### Testes unitários ###
 
 
 
-### *Integration testing* ###
+### Testes de integração ###
 
 
 
-### *System testing* ###
+### Testes de sistema ###
 
 
 
-### *Acceptance testing* ###
+### Testes de aceitação ###
 
 
 
-### *Regression testing* ###
+### Testes de regressão ###
 
 
 
-## *Bug report* ##
+## Correção do *Bug* ##
 
 Known Issues
 
@@ -115,4 +115,4 @@ Turma 1 - Grupo 4
 
 Faculdade de Engenharia da Universidade do Porto
 
-29 de novembro de 2015
+22 de novembro de 2015
