--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -88,6 +88,7 @@ Como se pode ver na imagem acima os testes cobrem grande parte do código: cerca
 
 ### Testes de integração ###
 
+A integração dos dois principais módulos do projecto (a CLI e a *Skyframe*) é feita pelo módulo *Java native interfaces*. Não são realizados quaisquer tipos de testes para garantir uma boa comunicação entre as duas linguagens de programação. No entanto, a perfeita integração dos testes é garantida pelos [protocol buffers](https://github.com/Digas29/bazel/blob/master/ESOF-docs/3.%20Architectural%20design.md#logical-view) utilizados por ambas as linguagens. As regras para comunicação são neles definidos sendo possível à CLI a infromação que tem ser enviada e retornada e à *Skyframe* saber que informação vai ser recebida e que tem se ser retornada. 
 
 
 ### Testes de sistema ###
